--- a/sugo-nav/test/fixtures/companies.yml
+++ b/sugo-nav/test/fixtures/companies.yml
@@ -1,11 +1,15 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-# This model initially had no columns defined.  If you add columns to the
-# model remove the '{}' from the fixture names and add the columns immediately
-# below each fixture, per the syntax in the comments below
-#
-one: {}
-# column: value
-#
-two: {}
-#  column: value
+one:
+  company_name: MyString
+  email: MyString
+  email_for_index: MyString
+  hashed_password: MyString
+  description: MyString
+
+two:
+  company_name: MyString
+  email: MyString
+  email_for_index: MyString
+  hashed_password: MyString
+  description: MyString
